--- a/jacket.html
+++ b/jacket.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="collections of jackets">
-    <title>RainyDays | Jacket</title>
+    <meta name="description" content="your choice of outdoor jackets from rainydays">
+    <title>RainyDays | Jackets</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"/>
-    <link href="css/index.css" rel="stylesheet"/>
-    <link href="css/media.css" rel="stylesheet"/>
-    <link href="css/contact.css" rel="stylesheet"/>
     <link href="css/jacket.css" rel="stylesheet"/>
-   
+    <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/media.css" rel="stylesheet"/>     
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -64,57 +62,57 @@
         </aside>
          <section class="all-product all-product_jacket">         
 
-                    <div class="products product_card">
-                            <img src="images/W1.jpg" alt="">
-                            <h3>Hiking Jacket</h3>
-                            <p>500kr</p>
-                            <a href="#" class="cart">Add to cart</a>
-                    </div>
-                    <div class="products">
-                            <img src="images/M9.jpg" alt="">
-                            <h3>Ski Jacket</h3>
-                            <p>500kr</p>
-                            <a href="#" class="cart">Add to cart</a>
-                    </div>
-                    <div class="products">
-                            <img src="images/W2.jpg" alt="">
-                            <h3>Rain Jacket</h3>
-                            <p>500kr</p>
-                            <a href="#" class="cart">Add to cart</a>
-                    </div>
-            
-                    <div  class="products">
-                            <img src="images/mw.jpg" alt="">
-                            <h3>Ski Jacket</h3>
-                            <p>500kr</p>
-                            <a href="#" class="cart">Add to cart</a>
-                    </div>
-                    <div  class="products">
-                            <img src="images/M16.jpg" alt="">
-                            <h3>Hiking Jacket</h3>
-                            <p>500kr</p>
-                            <a href="#" class="cart">Add to cart</a>
-                    </div>
-                    <div class="products">
-                            <img src="images/W3.jpg" alt="">
-                            <h3>Ski Jacket</h3>
-                            <p>500kr</p>
-                            <a href="#" class="cart">Add to cart</a>
-                    </div>
+            <div class="products">
+                <a href="products/hiking-jacket.html"><img src="images/W1.jpg" alt="Hiking jacket"></a>
+                 <h3>Hiking Jacket</h3>
+                 <p>500kr</p>
+                 <a href="shopping-cart.html" class="cart">Add to cart</a>
+         </div>
+         <div class="products">
+             <a href="products/hiking-jacket.html"><img src="images/M9.jpg" alt="Hiking jacket"></a>
+                 <h3>Ski Jacket</h3>
+                 <p>500kr</p>
+                 <a href="shopping-cart.html" class="cart">Add to cart</a>
+         </div>
+         <div class="products">
+             <a href="products/hiking-jacket.html"><img src="images/W2.jpg" alt="Hiking jacket"></a>
+                 <h3>Rain Jacket</h3>
+                 <p>500kr</p>
+                 <a href="shopping-cart.html" class="cart">Add to cart</a>
+         </div>
+ 
+  
+         <div  class="products">
+             <a href="products/hiking-jacket.html"><img src="images/mw.jpg" alt="Hiking jacket"></a>
+                 <h3>Ski Jacket</h3>
+                 <p>500kr</p>
+                 <a href="shopping-cart.html" class="cart">Add to cart</a>
+         </div>
+         <div  class="products">
+             <a href="products/hiking-jacket.html"><img src="images/M16.jpg" alt="Hiking jacket"></a>
+                 <h3>Hiking Jacket</h3>
+                 <p>500kr</p>
+                 <a href="shopping-cart.html"class="cart">Add to cart</a>
+         </div>
+         <div class="products">
+             <a href="products/hiking-jacket.html"><img src="images/W3.jpg" alt="Hiking jacket"></a>
+                 <h3>Ski Jacket</h3>
+                 <p>500kr</p>
+                 <a href="shopping-cart.html" class="cart">Add to cart</a>
+         </div>
 
-                    <div class="products">
-                                <img src="images/M15.jpg" alt="">
-                                <h3>Rain Jacket</h3>
-                                <p>500kr</p>
-                                <a href="#" class="cart">Add to cart</a>
-                    </div>
-                    <div class="products">
-                            <img src="images/mw.jpg" alt="">
-                            <h3>Ski Jacket</h3>
-                            <p>500kr</p>
-                            <a href="#" class="cart">Add to cart</a>
-                     </div>
-
+         <div class="products">
+             <a href="products/hiking-jacket.html"><img src="images/M15.jpg" alt="Hiking jacket"></a>
+                     <h3>Rain Jacket</h3>
+                     <p>500kr</p>
+                     <a href="shopping-cart.html" class="cart">Add to cart</a>
+         </div>
+         <div class="products">
+             <a href="products/hiking-jacket.html"><img src="images/mw.jpg" alt="Hiking jacket"></a>
+                 <h3>Ski Jacket</h3>
+                 <p>500kr</p>
+                 <a href="shopping-cart.html"class="cart">Add to cart</a>
+        </div>               
         </section>
     </div>
     </main>
