--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Best outdoor activity jackets from rainydays">
-    <title>RainyDays | Home</title>
+    <title>RainyDays | Contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
@@ -14,6 +14,10 @@
     <link href="css/media.css" rel="stylesheet"/>
     <link href="css/hiking-jacket.css" rel="stylesheet"/>
     <link href="css/contact.css" rel="stylesheet"/>
+    <link href="css/jacket.css" rel="stylesheet"/>
+    <link href="css/shopping-cart.css" rel="stylesheet"/>
+    <link href="css/checkout.css" rel="stylesheet"/>
+    <link href="css/success.css" rel="stylesheet"/>
    
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
 </head>
