--- a/success.html
+++ b/success.html
@@ -10,15 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"/>
-    <link href="css/index.css" rel="stylesheet"/>
-    <link href="css/media.css" rel="stylesheet"/>
-    <link href="css/hiking-jacket.css" rel="stylesheet"/>
-    <link href="css/contact.css" rel="stylesheet"/>
-    <link href="css/jacket.css" rel="stylesheet"/>
-    <link href="css/checkout.css" rel="stylesheet"/>
     <link href="css/success.css" rel="stylesheet"/>
-
-   
+    <link href="css/media.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -45,3 +38,21 @@
              </div>  
             </div>  
     </header>
+    <main class="success-page">
+        <section>
+            <p></p>
+        </section>
+       
+
+    </main>
+    <footer>
+        <h4>Copy Right &copy;</h4> 
+
+        <div class="icons">
+            <a href="#"><i class="fab fa-facebook-square fa-customize"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
+        </div>
+    </footer>
+    
+</body>
+</html
