--- a/checkout.html
+++ b/checkout.html
@@ -8,16 +8,14 @@
     <title>RainyDays | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet"/>
-    <link href="css/index.css" rel="stylesheet"/>
-    <link href="css/media.css" rel="stylesheet"/>
-    <link href="css/hiking-jacket.css" rel="stylesheet"/>
-    <link href="css/contact.css" rel="stylesheet"/>
-    <link href="css/jacket.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>   
     <link href="css/shopping-cart.css" rel="stylesheet"/>
     <link href="css/checkout.css" rel="stylesheet"/>
-    <link href="css/success.css" rel="stylesheet"/>
+    <link href="css/hiking-jacket.css" rel="stylesheet"/>
+    <link href="css/media.css" rel="stylesheet"/>
+   
    
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
 </head>
@@ -57,7 +55,7 @@
         <section  class="shipping-details_wrapper">        
             <div class="checkout-product-image">
                 <h3 class="title">product</h3>
-                <img src="../images/W2.jpg" alt="Hiking Jackets for Men's" />         
+                <img src="../images/M15.jpg" alt="Hiking Jackets for Men's" />         
             </div>
             <div class="checkout-product_size"> 
                 <h3 class="title">detail</h3>    
@@ -67,7 +65,7 @@
             <div class="quantity">
                 <h3 class="title">quantity</h3>
                 <label  for="quantity"></label>
-                <input class="title-margin" type="number" value="1">
+                <input id="quantity"class="title-margin" type="number" value="1">
             </div>
             <div class="checkout-product_price">
                 <h3 class="title">price</h3>
