--- a/products/hiking-jacket.html
+++ b/products/hiking-jacket.html
@@ -8,10 +8,13 @@
     <title>RainyDays | Hiking Jacket</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet"/>
     <link href="../css/hiking-jacket.css" rel="stylesheet"/>
     <link href="../css/jacket.css" rel="stylesheet"/>
+    <link href="../css/checkout.css" rel="stylesheet"/>
+    <link href="../css/shopping-cart.css" rel="stylesheet"/>
     <link href="../css/media.css" rel="stylesheet"/>  
    
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
@@ -45,17 +48,20 @@
     </header>
     <main class="product-detail">
         <section class="product-detail_image">
-          <img src="../images/W2.jpg" alt="Hiking Jackets for Men's" class="product_small-image" />
+          <img src="../images/M15.jpg" alt="Hiking Jackets for Men's" class="product_small-image" />
           <div class="single-product">
-            <img src="../images/W2.jpg" alt="Hiking Jacket" class="product_small-image"/>
-            <img src="../images/W2.jpg" alt="Hiking Jacket" class="product_small-image"/>
-            <img src="../images/W2.jpg" alt="Hiking Jacket" class="product_small-image"/>
-            <img src="../images/W2.jpg" alt="Hiking Jacket" class="product_small-image"/>
+            <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
+            <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
+            <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
+            <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
          </div>
         </section>
         <section class="product-specific_detail quantity">
-          <h1>Hiking Jacket</h1>
-          <p>$500</p>
+          <div>
+          <h1>Men's Hiking Jacket Blue Color</h1>
+          <p>jacket 101 #213465</p>
+        </div>
+          <p class="product-specific_price">$500</p>
           <label for="size">Select size:</label>
           <select name="size" id="size">
               <option value="small">S</option>
@@ -64,8 +70,8 @@
               <option value="x-large">XL</option>
           </select>
           <label for="quantity">Qty:</label>
-          <input  type="number" value="1">
-          <a href="#" class="cart">Add to cart</a>
+          <input id="quantity" type="number" value="1">
+          <a href="shopping-cart.html" class="cart">Add to cart</a>
         </section>
       </main>
       <footer>
