--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet"><link href="css/style.css" rel="stylesheet"/>
     <link href="css/success.css" rel="stylesheet"/>
     <link href="css/media.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
@@ -38,12 +38,16 @@
              </div>  
             </div>  
     </header>
-    <main class="success-page">
-        <section>
-            <p></p>
-        </section>
-       
-
+    <main class="success-contener">
+        <section class="success-page">
+          <div class="success-page-wrapper"> 
+        <a href="index.html"><i class="fas fa-check-circle success-sign"></i></a>
+           <h1>Thank you</h1>
+        <p>Your submission has been send.</p>
+       <p>we will contact to you soon.</p>
+       <a href="index.html" class="cart sucess-continue-shopping">Continue Shopping</a>  
+    </div>        
+    </section>
     </main>
     <footer>
         <h4>Copy Right &copy;</h4> 
