--- a/jacket.html
+++ b/jacket.html
@@ -8,6 +8,7 @@
     <title>RainyDays | Jackets</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"/>
     <link href="css/jacket.css" rel="stylesheet"/>
