--- a/jacket.html
+++ b/jacket.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"/>
-    <link href="css/jacket.css" rel="stylesheet"/>
-    <link href="css/index.css" rel="stylesheet"/>
+    <link href="css/jacket.css" rel="stylesheet"/> 
+    <link href="css/index.css" rel="stylesheet"/>  
     <link href="css/media.css" rel="stylesheet"/>     
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
 </head>
@@ -24,8 +24,8 @@
         <div class="nav-wrapper-tablet">
           <nav>    
                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="jacket.html">Men</a></li>
+                    <li><a href="index.html" >Home</a></li>
+                    <li><a href="jacket.html"class="active">Men</a></li>
                     <li><a href="jacket.html">Women</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -43,7 +43,7 @@
                 <div class="icon-bars">
                 <div class="home-bar"><a href=""><i class="fas fa-home"></i></a></div>
                 <a href=""><i class="fas fa-search"></i></a> 
-                <a href=""><i class="fas fa-shopping-cart"></i></a> 
+                <a href="products/hiking-jacket.html"><i class="fas fa-shopping-cart"></i></a> 
                 </div>
            
              </div>  
@@ -51,9 +51,9 @@
          
     </header>
     <main class="jacket-page">
-        <h1>Men's</h1>
+        <h1>Men's and Women's</h1>
         <div class="jacket-page_wrapper">
-        <aside class="category">
+        <aside class="jacket-category">
             <h2>Categories</h2>           
             <ul>
                 <li><a href="products/hiking-jacket.html">Ski jackets</a></li>
