--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
                 <input type="checkbox" id="hamburger-menu">
           <nav>    
                <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html" >Home</a></li>
                     <li><a href="jacket.html">Men</a></li>
                     <li><a href="jacket.html">Women</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html"class="active">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>  
              
