--- a/jacket.html
+++ b/jacket.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"/>
     <link href="css/jacket.css" rel="stylesheet"/> 
-    <link href="css/index.css" rel="stylesheet"/>  
     <link href="css/media.css" rel="stylesheet"/>     
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
 </head>
@@ -51,7 +50,7 @@
          
     </header>
     <main class="jacket-page">
-        <h1>Men's and Women's</h1>
+        <h1>Men's / Women's</h1>
         <div class="jacket-page_wrapper">
         <aside class="jacket-category">
             <h2>Categories</h2>           
