--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <div class="about-page_wrapper">
         
         <section class="about_picture">
-            <img src="../images/aboutUs.png" alt="Rainydays jacket collection"/>
+            <img src="images/about-us.png" alt="Rainydays jacket collection"/>
         </section>
         <section class="aboutUs-text" >
                <p>Rainy days are an online shop where jackets will be selling. The specific target of Rainy Days is
