--- a/products/hiking-jacket.html
+++ b/products/hiking-jacket.html
@@ -11,10 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet"/>
-    <link href="../css/hiking-jacket.css" rel="stylesheet"/>
-    <link href="../css/jacket.css" rel="stylesheet"/>
-    <link href="../css/checkout.css" rel="stylesheet"/>
-    <link href="../css/shopping-cart.css" rel="stylesheet"/>
+    <link href="../css/hiking-jacket.css" rel="stylesheet"/>  
     <link href="../css/media.css" rel="stylesheet"/>  
    
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
@@ -48,12 +45,14 @@
     </header>
     <main class="product-detail">
         <section class="product-detail_image">
-          <img src="../images/M15.jpg" alt="Hiking Jackets for Men's" class="product_small-image" />
+          <div class="product_small-image">
+          <img src="../images/M15.jpg" alt="Hiking Jackets for Men's"/>
+        </div>
           <div class="single-product">
             <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
             <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
             <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
-            <img src="../images/M15.jpg" alt="Hiking Jacket" class="product_small-image"/>
+            
          </div>
         </section>
         <section class="product-specific_detail quantity">
@@ -71,7 +70,7 @@
           </select>
           <label for="quantity">Qty:</label>
           <input id="quantity" type="number" value="1">
-          <a href="shopping-cart.html" class="cart">Add to cart</a>
+          <a href="../shopping-cart.html" class="cart">Add to cart</a>
         </section>
       </main>
       <footer>
