--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -61,7 +61,7 @@
         </div>       
         <div class="checkout-product-image">
             <h3 class="title">product</h3>
-            <img src="../images/W1.jpg" alt="Hiking Jackets for Men's" />         
+            <img src="images/W1.jpg" alt="Hiking Jackets for Men's" />         
         </div>
         <div class="checkout-product_size"> 
             <h3 class="title">detail</h3>    
@@ -83,7 +83,7 @@
             <input type="checkbox">
         </div>       
         <div class="checkout-product-image">            
-            <img src="../images/M15.jpg" alt="Hiking Jackets for Men's" />         
+            <img src="images/M16.jpg" alt="Hiking Jackets for Men's" />         
         </div>
         <div class="checkout-product_size">              
             <h2 class="title-margin">Hiking Jacket</h2>
