--- a/checkout.html
+++ b/checkout.html
@@ -11,9 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet"/>   
-    <link href="css/shopping-cart.css" rel="stylesheet"/>
     <link href="css/checkout.css" rel="stylesheet"/>
-    <link href="css/hiking-jacket.css" rel="stylesheet"/>
+   
     <link href="css/media.css" rel="stylesheet"/>
    
    
@@ -55,7 +54,7 @@
         <section  class="shipping-details_wrapper">        
             <div class="checkout-product-image">
                 <h3 class="title">product</h3>
-                <img src="../images/M15.jpg" alt="Hiking Jackets for Men's" />         
+                <img src="images/M16.jpg" alt="Hiking Jackets for Men's" />         
             </div>
             <div class="checkout-product_size"> 
                 <h3 class="title">detail</h3>    
