--- a/success.html
+++ b/success.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Best outdoor activity jackets from rainydays">
-    <title>RainyDays | Home</title>
+    <meta name="description" content="Thank you for shopping from rainydays">
+    <title>RainyDays | Success</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;700&display=swap" rel="stylesheet">
@@ -15,28 +15,40 @@
     <script src="https://kit.fontawesome.com/b3766b9c07.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<header> 
-               <a href="index.html"><img class="logo" src="images/RainyDays_Logo-1.png" alt="logo of the website"></a>  
-        <div class="nav-wrapper-tablet">
-                <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
-                <input type="checkbox" id="hamburger-menu">
-          <nav>    
-               <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="jacket.html">Men</a></li>
-                    <li><a href="jacket.html">Women</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>   
-            </nav> 
-            <div class="icons-nav">
-                <div class="icon-bars">
-                <div class="home-bar"><a href=""><i class="fas fa-home"></i></a></div>
-                <a href=""><i class="fas fa-search"></i></a> 
-                <a href=""><i class="fas fa-shopping-cart"></i></a> 
-                </div>
-             </div>  
-            </div>  
+ <header>
+      <div class="brand">
+        <a href="index.html"
+          ><img
+            class="logo"
+            src="images/RainyDays_Logo-1.png"
+            alt="logo of the website"
+        /></a>
+      </div>
+
+      <div class="nav-wrapper-tablet">
+        <div class="nav-container">
+          <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+          <input type="checkbox" id="hamburger-menu" />
+          <nav>
+            <ul>
+              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="menProduct.html">Men</a></li>
+              <li><a href="womenProduct.html">Women</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="icons-nav">
+          <div class="icon-bars">
+            <div class="home-bar">
+              <a href=""><i class="fas fa-home"></i></a>
+            </div>
+            <a href=""><i class="fas fa-search"></i></a>
+            <a href="checkout.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+        </div>
+      </div>
     </header>
     <main class="success-contener">
         <section class="success-page">
@@ -56,7 +68,6 @@
             <a href="#"><i class="fab fa-facebook-square fa-customize"></i></a>
             <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
         </div>
-    </footer>
-    
+    </footer>    
 </body>
 </html
