--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
       src="https://kit.fontawesome.com/b3766b9c07.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Hotjar Tracking Code for http://127.0.0.1:5502/index.html -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2856502, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
@@ -78,7 +94,7 @@
 
       <section class="all-product">
         <h2>Best Collection of This Month</h2>
-        <div class="products">
+        <!-- <div class="products">
           <a href="products/hiking-jacket.html"
             ><img src="images/W1.jpg" alt="Hiking jacket"
           /></a>
@@ -143,7 +159,7 @@
           <h3>Ski Jacket</h3>
           <p>500kr</p>
           <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
+        </div> -->
       </section>
     </main>
     <footer>
