--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <section class="all-product">
         <h2>Best Collection of This Month</h2>
-        <!-- <div class="products">
+        <div class="products">
           <a href="products/hiking-jacket.html"
             ><img src="images/W1.jpg" alt="Hiking jacket"
           /></a>
@@ -159,7 +159,7 @@
           <h3>Ski Jacket</h3>
           <p>500kr</p>
           <a href="checkout.html" class="cart">Add to cart</a>
-        </div> -->
+        </div>
       </section>
     </main>
     <footer>
