--- a/checkout.html
+++ b/checkout.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="checkout here"
-    />
+    <meta name="description" content="checkout here" />
     <title>RainyDays | Checkout</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,6 +24,26 @@
       src="https://kit.fontawesome.com/b3766b9c07.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/b3766b9c07.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Hotjar Tracking Code for http://127.0.0.1:5502/index.html -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2856502, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
@@ -69,7 +86,7 @@
 
       <div class="main-checkout_wrapper">
         <div class="shopping-cart">
-          <section class="shipping-details_wrapper">
+          <!-- <section class="shipping-details_wrapper">
             <div class="shopping-cart_checkbox">
               <input type="checkbox" />
             </div>
@@ -96,7 +113,7 @@
               <h3 class="title">price</h3>
               <p class="title-margin">$500</p>
             </div>
-          </section>
+          </section> -->
         </div>
         <section class="order-summary">
           <h1>Order summary</h1>
@@ -131,5 +148,8 @@
         <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
       </div>
     </footer>
+    <script type="module" src="js/data.js"></script>
+    <!-- <script type="module" src="js/displayError.js"></script> -->
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
