--- a/index.html
+++ b/index.html
@@ -21,12 +21,29 @@
     />
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
+    <link href="css/hiking-jacket.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
 
     <script
       src="https://kit.fontawesome.com/b3766b9c07.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Hotjar Tracking Code for http://127.0.0.1:5502/index.html -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 2856502, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body>
     <header>
@@ -59,7 +76,15 @@
               <a href=""><i class="fas fa-home"></i></a>
             </div>
             <a href=""><i class="fas fa-search"></i></a>
-            <a href="checkout.html"><i class="fas fa-shopping-cart"></i></a>
+            <div class="cart-icon">
+              <a href="shopping-cart.html"
+                ><i class="fas fa-shopping-cart"
+                  ><span class="cart-info">0</span></i
+                ></a
+              >
+
+              <!-- <div class="cart__icon-quantity"></div> -->
+            </div>
           </div>
         </div>
       </div>
@@ -72,79 +97,41 @@
             <span class="h1-hightlight">30% off</span>
             <span class="h1-wrap">New Arrival</span>
           </h1>
-          <a href="checkout.html" class="shop-button">shop Now</a>
+          <a href="#" class="shop-button">shop Now</a>
         </div>
       </section>
 
-      <section class="all-product">
-        <h2>Best Collection of This Month</h2>
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/W1.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Hiking Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/M9.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Ski Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/W2.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Rain Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
+      <section>
+        <h2 class="home-h2-header">Best Collection of This Month</h2>
 
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/mw.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Ski Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/M16.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Hiking Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/W3.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Ski Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
-
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/M16.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Rain Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
-        </div>
-        <div class="products">
-          <a href="products/hiking-jacket.html"
-            ><img src="images/mw.jpg" alt="Hiking jacket"
-          /></a>
-          <h3>Ski Jacket</h3>
-          <p>500kr</p>
-          <a href="checkout.html" class="cart">Add to cart</a>
+        <div class="all-product">
+          <!-- <div class="spinner"></div> -->
         </div>
       </section>
+      <div class="cartContainer">
+        <div class="cart-list">
+          <!-- <div class="cart-title">
+            <div class="cart-wrapper">
+              <h4>Item</h4>
+              <div>image</div>
+            </div>
+            <div class="cart-wrapper">
+              <h4>size</h4>
+              <div>image</div>
+            </div>
+            <div class="cart-wrapper">
+              <h4>quantity</h4>
+              <div>image</div>
+            </div>
+            <div class="cart-wrapper">
+              <h4>unit Price</h4>
+              <div>image</div>
+            </div>
+          </div> -->
+        </div>
+        <div class="totalPrice"></div>
+        <a href="shopping-cart.html"> checkout</a>
+      </div>
     </main>
     <footer>
       <h4>Copy Right &copy;</h4>
@@ -153,5 +140,10 @@
         <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
       </div>
     </footer>
+
+    <script type="module" src="js/data.js"></script>
+    <!-- <script type="module" src="js/displayError.js"></script> -->
+    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/cart.js"></script>
   </body>
 </html>
