--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -8,7 +8,7 @@
       name="description"
       content="Best outdoor activity jackets from rainydays"
     />
-    <title>RainyDays | Home</title>
+    <title>RainyDays | shopping-cart</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
