--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -8,7 +8,7 @@
       name="description"
       content="Best outdoor activity jackets from rainydays"
     />
-    <title>RainyDays | shopping-cart</title>
+    <title>RainyDays | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,14 +28,7 @@
       src="https://kit.fontawesome.com/b3766b9c07.js"
       crossorigin="anonymous"
     ></script>
-<<<<<<< HEAD
 
-=======
-    <script
-      src="https://kit.fontawesome.com/b3766b9c07.js"
-      crossorigin="anonymous"
-    ></script>
->>>>>>> d8a40a286f46c016bc54c201e4563466e7b49984
     <!-- Hotjar Tracking Code for http://127.0.0.1:5502/index.html -->
     <script>
       (function (h, o, t, j, a, r) {
@@ -68,13 +61,8 @@
         <nav>
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
-<<<<<<< HEAD
             <li><a href="menProduct.html">Men</a></li>
             <li><a href="womenProduct.html">Women</a></li>
-=======
-            <li><a href="jacket.html">Men</a></li>
-            <li><a href="jacket.html">Women</a></li>
->>>>>>> d8a40a286f46c016bc54c201e4563466e7b49984
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -85,22 +73,17 @@
               <a href=""><i class="fas fa-home"></i></a>
             </div>
             <a href=""><i class="fas fa-search"></i></a>
-<<<<<<< HEAD
             <div class="cart-icon">
               <a href="shopping-cart.html"
                 ><i class="fas fa-shopping-cart"
                   ><span class="cart-info">0</span></i
                 ></a
               >
-=======
-            <a href=""><i class="fas fa-shopping-cart"></i></a>
->>>>>>> d8a40a286f46c016bc54c201e4563466e7b49984
           </div>
         </div>
       </div>
     </header>
     <main class="main-checkout">
-<<<<<<< HEAD
       <div class="header-of-cart-page"></div>
 
       <div class="main-checkout_wrapper">
@@ -123,81 +106,6 @@
           </div>
           <div class="shopping-cart-button">
             <a href="success.html" class="shop-button checkout-now">Checkout Now</a>
-=======
-      <h1>Shopping Cart</h1>
-
-      <div class="main-checkout_wrapper">
-        <div class="shopping-cart">
-          <section class="shipping-details_wrapper">
-            <div class="shopping-cart_checkbox">
-              <input type="checkbox" />
-            </div>
-            <div class="checkout-product-image">
-              <h3 class="title">product</h3>
-              <img src="images/W1.jpg" alt="Hiking Jackets for Men's" />
-            </div>
-            <div class="checkout-product_size">
-              <h3 class="title">detail</h3>
-              <h2 class="title-margin">Hiking Jacket</h2>
-              <p>Size : S</p>
-            </div>
-            <div class="quantity">
-              <h3 class="title">quantity</h3>
-              <label for="quantity"></label>
-              <input
-                id="quantity"
-                class="title-margin"
-                type="number"
-                value="1"
-              />
-            </div>
-            <div class="checkout-product_price">
-              <h3 class="title">price</h3>
-              <p class="title-margin">$500</p>
-            </div>
-          </section>
-          <section class="shipping-details_wrapper">
-            <div class="shopping-cart_checkbox2">
-              <input type="checkbox" />
-            </div>
-            <div class="checkout-product-image">
-              <img src="images/M16.jpg" alt="Hiking Jackets for Men's" />
-            </div>
-            <div class="checkout-product_size">
-              <h2 class="title-margin">Hiking Jacket</h2>
-              <p>Size : S</p>
-            </div>
-            <div class="quantity">
-              <label for="quantity"></label>
-              <input
-                id="quantity"
-                class="title-margin"
-                type="number"
-                value="1"
-              />
-            </div>
-            <div class="checkout-product_price">
-              <p class="title-margin">$500</p>
-            </div>
-          </section>
-        </div>
-        <section class="order-summary">
-          <h1>Order summary</h1>
-          <div class="total">
-            <p>Sub Total</p>
-            <p>500kr</p>
-          </div>
-          <div class="total">
-            <p>Estimated Delivery</p>
-            <p>0Kr</p>
-          </div>
-          <div class="total">
-            <p>Estimated Total</p>
-            <p>500Kr</p>
-          </div>
-          <div class="shopping-cart-button">
-            <a href="#" class="shop-button checkout-now">Checkout Now</a>
->>>>>>> d8a40a286f46c016bc54c201e4563466e7b49984
             <a href="#" class="cart continue-shopping">Continue Shopping</a>
           </div>
         </section>
@@ -211,10 +119,7 @@
         <a href="#"><i class="fab fa-instagram fa-customize"></i></a>
       </div>
     </footer>
-<<<<<<< HEAD
 
     <script src="js/cart.js" type="module"></script>
-=======
->>>>>>> d8a40a286f46c016bc54c201e4563466e7b49984
   </body>
 </html>
