--- a/womenProduct.html
+++ b/womenProduct.html
@@ -78,7 +78,13 @@
               <a href=""><i class="fas fa-home"></i></a>
             </div>
             <a href=""><i class="fas fa-search"></i></a>
-            <a href="checkout.html"><i class="fas fa-shopping-cart"></i></a>
+            <div class="cart-icon">
+              <a href="shopping-cart.html"
+                ><i class="fas fa-shopping-cart"
+                  ><span class="cart-info">0</span></i
+                ></a
+              >
+            </div>
           </div>
         </div>
       </div>
